	* src/Report.py (parse_target_frame): Remove unneeded check; when
	checking existing file/dir, make sure we requested file/dir,
	correspondingly.
	* src/plugins/NavWebPage (archive_toggle): Add/remove '.tar.gz'
	to path when this options is turned on/off; (parse_style_frame):
	save archive option as an integer; (setup_html_frame): set the
	state for archive option.

2005-12-08  Don Allingham  <don@gramps-project.org>
	* src/Merge.py: fix date comparison
	* src/Utils.py: add xml:lang generation function
	* src/docgen/AbiWord2Doc.py: set locale
	* src/docgen/OpenOfficeDoc: set locale using xml_lang()
	* src/plugins/NavWebPage.py: set locale
	* src/plugins/ChangeNames.py: call GrampsDisplay.help
	* src/plugins/Checkpoint.py: call GrampsDisplay.help
	* src/plugins/Desbrowser.py: call GrampsDisplay.help
	* src/plugins/EventCmp.py: call GrampsDisplay.help
	* src/plugins/FilterEditor.py: call GrampsDisplay.help
	* src/plugins/Merge.py: call GrampsDisplay.help
	* src/plugins/PatchNames.py: call GrampsDisplay.help
	* src/plugins/Verify.py: call GrampsDisplay.help

2005-12-08  Alex Roitman  <shura@gramps-project.org>
	* src/Utils.py (probably_alive): return False if any event
	of the person happened over 150 years ago; (too_old): add
	function; (not_too_old): require definite year for a positive
	decision.
	* src/Report.py (parse_target_frame): Check permissions for the
	specified file.

2005-12-07  Eero Tamminen  <eerot@sf>
	* src/po/fi.po: Translation update to latest template

2005-12-07  Benny Malengier  <bm@cage.UGent.be>
	* src/dates/Date_nl.py: Replace dashes with slashes, other
	enhancements.

2005-12-07  Alex Roitman  <shura@gramps-project.org>
	* src/DateDisplay.py (_display_gregorian): Replace dashes with
	slashes to prevent collision with the ISO format.
	* src/po/ru.po: Translation update.
	* doc/gramps-manual/Makefile.am: Remove existing link before
	creating a new one.
	* src/ReadGrdb.py: Disable signals and request rebuild at the end;